--- a/MyTiKi/app/src/main/res/values/strings.xml
+++ b/MyTiKi/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My TiKi</string>
+    <string name="app_name">T Shop</string>
     <string name="bot_nav_home">Home</string>
     <string name="bot_nav_category">Category</string>
     <string name="bot_nav_search">Search</string>
@@ -192,6 +192,8 @@
     <string name="retry">Retry</string>
     <string name="search">Search</string>
     <string name="not_looking_for_a_product_name">Not looking for a product name</string>
+    <string name="cart_empty">Your shopping cart is empty</string>
+    <string name="the_order_list_is_empty">The order list is empty</string>
 
 
 </resources>
