--- a/MyTiKi/app/src/main/res/values-vi/strings.xml
+++ b/MyTiKi/app/src/main/res/values-vi/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">My TiKi</string>
+    <string name="app_name">T Shop</string>
     <string name="bot_nav_category">Danh mục</string>
     <string name="bot_nav_home">Trang chủ</string>
     <string name="bot_nav_notification">Thông báo</string>
