--- a/MyTiKi/app/src/main/res/values/strings.xml
+++ b/MyTiKi/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My TiKi</string>
+    <string name="app_name">T Shop</string>
     <string name="bot_nav_home">Home</string>
     <string name="bot_nav_category">Category</string>
     <string name="bot_nav_search">Search</string>
