--- a/MyTiKi/app/src/main/res/values/strings.xml
+++ b/MyTiKi/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="dialogSendMail">Password reset successfully, please check your email</string>
     <string name="dialogRegister">Account successfully created, please check your email to activate your account</string>
     <string name="dialogDelSlide">Are you sure you want to delete this ad?</string>
+    <string name="dialogDelProduct">Are you sure you want to delete this product?</string>
     <string name="add_like_product">Added to favorite product list</string>
     <string name="rab_male">Male</string>
     <string name="female">Female</string>
@@ -115,6 +116,10 @@
     <string name="error_signup">Registration failed</string>
     <string name="error_input_email_not_exists">The email does not exist or is not registered</string>
     <string name="error_input_address_not_entered">Please enter your address</string>
+    <string name="err_product_name">Please enter product name</string>
+    <string name="errPrice">Please enter price of product</string>
+    <string name="errProCount">Please enter product count</string>
+    <string name="errProInfo">Please enter product info</string>
     <string name="error_input_name_not_entered">Please enter your name</string>
     <string name="error_input_name_not_length">The name must be 1 character or more</string>
     <string name="error_input_phone_not_entered">Please enter your phone</string>
@@ -229,6 +234,9 @@
     <string name="price">Price</string>
     <string name="product_count">Product count</string>
     <string name="info_s_product">Info\'s product</string>
+    <string name="product_s_name">Product\'s name</string>
+    <string name="sale">Sale</string>
+    <string name="category_s_name">Category\'s name</string>
 
 
 </resources>
