add revenue detail

--- a/MyTiKi/app/src/main/res/values/strings.xml
+++ b/MyTiKi/app/src/main/res/values/strings.xml
@@ -27,6 +27,9 @@
     <string name="status_3">Orders have been shipped</string>
     <string name="status_4">Order canceled</string>
 
+    <string name="change1">The order has been received -> Orders are being delivered</string>
+    <string name="change2">Orders are being delivered -> Orders have been shipped</string>
+
 
     <string name="products_purchased_later">Products purchased later</string>
     <string name="mycomment">Mycomment</string>
